<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context="com.zapata.yerson.punto4.MainActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp"
            android:text="Formulatron 3000"
            android:layout_weight="2"
            android:textSize="20dp"

            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp"
            android:text=""
            android:textColor="@color/black"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp"
            android:text=""
            android:layout_weight="1"
            android:textColor="@color/black" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/Usser"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/repetirPassword"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/pass2"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/correo"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/eMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="9dp"
            android:text="@string/sexo"
            android:textColor="@color/black"
            android:layout_weight="2"/>

        <RadioGroup
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/male"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_span="2"
            android:layout_weight="1"
            >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/female" />

        </RadioGroup>

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/fechaNacimiento"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/lugarNacimiento"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/lugar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="9dp"
            android:text="@string/Hobbies"
            android:textColor="@color/black"
            android:layout_weight="2"/>

        <RadioGroup
            android:id="@+id/hobbies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checkedButton="@+id/h1"
            android:orientation="horizontal"
            android:layout_span="2"
            android:layout_weight="2.5"
            >

            <RadioButton
                android:id="@+id/h1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Ajedrez" />

            <RadioButton
                android:id="@+id/h2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Nadar" />
            <RadioButton
                android:id="@+id/h3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Cantar" />
            <RadioButton
                android:id="@+id/h4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Caminar" />

        </RadioGroup>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:id="@+id/datos"
            android:text=""
            android:textColor="@color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Aceptar"
            android:textSize="10dp"
            android:id="@+id/bCalcular"
            android:layout_gravity="center"
            android:onClick="bAceptar"


            />

    </TableRow>

</TableLayout>



